temp fix quill overflow issue

--- a/app/assets/stylesheets/components/_app.scss
+++ b/app/assets/stylesheets/components/_app.scss
@@ -1,6 +1,7 @@
 #main-app {
   height: 100vh;
   width: 100%;
+  overflow: hidden;
 }
 
 #main-app > * {
