--- a/app/assets/stylesheets/components/_note_form.scss
+++ b/app/assets/stylesheets/components/_note_form.scss
@@ -25,6 +25,11 @@
       border: 0px solid white;
       position: relative;
       top: 55px;
+
+      .ql-editor {
+        overflow-y: auto;
+        max-height: 75vh;
+      }
     }
   }
 }
